[package]
name = "rtag"
version = "0.1.0"
authors = ["CloseChoice <tobias.pitters@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
rusqlite = "0.24.2"
prettytable-rs = "0.8.0"